--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "homepage": "https://kushalrepo.github.io/languagequiz",
   "name": "my-react-pwa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
