--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kushalrepo.github.io/languagequiz",
+  "homepage": "https://kushalrepo.github.io/my-react-pwa",
   "name": "my-react-pwa",
   "private": true,
   "version": "0.0.0",
